[project]
dependencies = [
    "starkbiter_bindings==0.1.8",
    "pycryptodome==3.23.0",
    "git+https://github.com/NethermindEth/starknet-abi.git",
]
name = "test-maturin"
version = "0.1.0"
description = "Default template for PDM package"
authors = [{ name = "baitcode", email = "batiyiv@gmail.com" }]
requires-python = "==3.12.*"
readme = "README.md"
license = { text = "MIT" }


[tool.pdm]
distribution = false
